Add script for collecting all subjects having abstracts